# compas_mission_control

./: .gitignore  README.md  SPEC.md  features.yml  repos.yml
.github/workflows/: build-and-deploy.yml
collector/: __init__.py  __main__.py  conda.py  features.py  github.py  parse.py  pypi.py  pyproject.toml
data-history/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: data.json
site/src/: App.vue  style.css
